# ROS2-JdeRobot-GSOC-Challenge

./: CMakeCache.txt  README.md  install_dependencies.sh  my_map.pgm
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_fast_bulk_read.h  group_fast_sync_read.h  group_handler.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node  read_write_node.py
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/introduction_to_ros2/share/introduction_to_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml
install/my-test-package/share/my-test-package/: package.sh
install/ros2_navigation2/lib/ros2_navigation2/: navigate_waypoints.py  ros2_navigation2  waypoint_navigator.py
install/ros2_navigation2/share/ros2_navigation2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/turtlebot3/share/turtlebot3/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_bringup/share/turtlebot3_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_cartographer/share/turtlebot3_cartographer/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_description/share/turtlebot3_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_example/lib/turtlebot3_example/: turtlebot3_interactive_marker  turtlebot3_obstacle_detection  turtlebot3_patrol_client  turtlebot3_patrol_server  turtlebot3_position_control_pointop_key
install/turtlebot3_example/share/turtlebot3_example/: package.sh
install/turtlebot3_fake_node/include/turtlebot3_fake_node/: turtlebot3_fake_node.hpp
install/turtlebot3_fake_node/lib/turtlebot3_fake_node/: turtlebot3_fake_node
install/turtlebot3_fake_node/share/turtlebot3_fake_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_gazebo/include/turtlebot3_gazebo/: obstacle1.hpp  obstacle2.hpp  obstacles.hpp  traffic_bar_plugin.hpp  traffic_light_plugin.hpp  turtlebot3_drive.hpp
install/turtlebot3_gazebo/lib/turtlebot3_gazebo/: turtlebot3_drive
install/turtlebot3_gazebo/share/turtlebot3_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_msgs/share/turtlebot3_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_navigation2/share/turtlebot3_navigation2/: local_setup.bash  local_setup.dsv  (+4 more)
log/: latest_build  latest_list
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/introduction_to_ros2/: CMakeLists.txt
src/introduction_to_ros2/rviz/: turtlebot3_mode.rviz
src/introduction_to_ros2/src/: introduction_to_ros2.cpp
src/log/: latest_build
src/ros2_navigation2/: CMakeLists.txt  package.xml
src/ros2_navigation2/scripts/: waypoint_navigator.py
src/ros2_navigation2/src/: ros2_navigation2.cpp
(+507 files in other folders)
